--- a/Revision2023.vcxproj
+++ b/Revision2023.vcxproj
@@ -153,6 +153,10 @@
     <ClInclude Include="include\soundTrack.h" />
     <ClInclude Include="include\window.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ShaderFiles\Shader.fs" />
+    <None Include="ShaderFiles\Shader.vs" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
