--- a/Revision2023.vcxproj
+++ b/Revision2023.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="src\renderer.cpp" />
     <ClCompile Include="src\soundTrack.cpp" />
     <ClCompile Include="src\synctracker.cpp" />
+    <ClCompile Include="src\textloader.cpp" />
     <ClCompile Include="src\window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -155,6 +156,7 @@
     <ClInclude Include="include\renderer.h" />
     <ClInclude Include="include\soundTrack.h" />
     <ClInclude Include="include\synctracker.h" />
+    <ClInclude Include="include\textloader.h" />
     <ClInclude Include="include\window.h" />
   </ItemGroup>
   <ItemGroup>
