--- a/Revision2023.vcxproj
+++ b/Revision2023.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{4e964a44-e416-42cf-b368-0ed7af10ceed}</ProjectGuid>
     <RootNamespace>Revision2023</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Evoke2023</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
